syntax = "proto3";
package companies;
import "industry.proto";
import "company.proto";
message CompanyNicheIndustryMapping {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional int32 companyId = 8;
  optional int32 industryId = 9;
  optional Company company = 10;
  optional Industry industry = 11;
}
